Ajustes de Geracao de arquivo para leitura de UTM

--- a/APP.KMX/wwwroot/html/index.html
+++ b/APP.KMX/wwwroot/html/index.html
@@ -24,7 +24,7 @@
       <div class="text-center mb-6">
         <img class="mb-6" src="logokmx.jpeg" alt="" width="300" height="300">
         <h1 class="h3 mb-6 font-weight-normal">KMX Converter</h1>
-        <p>Carregue seu arquivo XLS e converta para <br> <b>KMX</b> e <b>KMZ</b> <a href="https://caniuse.com/#feat=css-placeholder-shown"></a></p>
+        <p>Carregue seu arquivo XLS e converta para <br> <b>KML</b> e <b>KMZ</b> <a href="https://caniuse.com/#feat=css-placeholder-shown"></a></p>
       </div>
 
       <div class="form-label-group">
@@ -38,7 +38,7 @@
       <label class="h5 mb-6 font-weight-normal" style="color: rebeccapurple;">KMX, convertendo em 1 piscar de olhos as suas coordenadas.
  <br><hr>Ferramenta Compatível com :  <b> Google Earth, Google Mapas e Excel </b> <br><br>
       </label>
-      <button class="btn btn-lg btn-primary btn-block" type="button" style="background-color:white; color: rebeccapurple; border: solid;"  onclick="alert('Estamos em desenvolvimento')">Converter</button>
+      <button class="btn btn-lg btn-primary btn-block" type="button" style="background-color:white; color: rebeccapurple; border: solid;" >Converter</button>
       <p class="mt-5 mb-3 text-muted text-center">&copy; 2024</p>
     </form>
   </body>
